--- a/RePoint.FileSystem.Manager.csproj
+++ b/RePoint.FileSystem.Manager.csproj
@@ -4,7 +4,40 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>RePointFS</AssemblyName>
+    <IsPublishable>True</IsPublishable>
+    <ApplicationIcon>favicon (2).ico</ApplicationIcon>
+    <Title>RePointFS</Title>
+    <Company>JOEVER MONCEDA</Company>
+    <Product>RePoint</Product>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>A lightweight C# library for simplifying common file system tasks. Easily download files from Azure Blob Storage and save file paths to a SQL Server database. Simplify your file management workflows with FileSystem Utilities.</Description>
+    <Copyright>2024</Copyright>
+    <PackageProjectUrl>https://github.com/Ethan0007/RePointFS</PackageProjectUrl>
+    <PackageIcon>R1.png</PackageIcon>
+    <RepositoryType>https://github.com/Ethan0007/RePointFS</RepositoryType>
+    <PackageTags>C#, FileSystem , Azure</PackageTags>
+    <PackageReleaseNotes>1. Added support for downloading files from Azure Blob Storage.
+2. Implemented functionality to save file paths to a SQL Server database.
+3. Provides an easy-to-use interface for common file system operations.
+4. Initial release of the FileSystem Utilities library.</PackageReleaseNotes>
+    <PackAsTool>True</PackAsTool>
+	<IsPackable>true</IsPackable>	  
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+	  <Version>1.0.0.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="favicon (2).ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Users\Joever Monceda\Downloads\R1.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0-beta.2" />
