--- a/RePoint.FileSystem.Manager.csproj
+++ b/RePoint.FileSystem.Manager.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <AssemblyName>RePointFS</AssemblyName>
     <IsPublishable>True</IsPublishable>
-    <ApplicationIcon>favicon (2).ico</ApplicationIcon>
+    <ApplicationIcon>Images\favicon.ico</ApplicationIcon>
     <Title>RePointFS</Title>
     <Company>RePoint</Company>
     <Product>RePoint</Product>
@@ -14,7 +14,7 @@
     <Description>A lightweight C# library for simplifying common file system tasks. Easily download files from Azure Blob Storage and save file paths to a SQL Server database. Simplify your file management workflows with FileSystem Utilities.</Description>
     <Copyright>2024</Copyright>
     <PackageProjectUrl>https://github.com/Ethan0007/RePointFS</PackageProjectUrl>
-    <PackageIcon>R1.png</PackageIcon>
+    <PackageIcon>RePointFS.png</PackageIcon>
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>C#, FileSystem , Azure</PackageTags>
     <PackageReleaseNotes>1. Added support for downloading files from Azure Blob Storage.
@@ -27,19 +27,17 @@
     <FileVersion>1.0.0.0</FileVersion>
 	  <Version>1.0.0.0</Version>
 	  <RepositoryUrl>https://github.com/Ethan0007/RePointFS</RepositoryUrl>
+	  <PackageLicenseFile>License.txt</PackageLicenseFile>
+	  <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Images\favicon %282%29.ico" />
+    <Content Include="Images\favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    
   </ItemGroup>
-
-  <ItemGroup>
-    <None Include="C:\Users\Joever Monceda\Downloads\R1.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
-
+ 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0-beta.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
@@ -49,6 +47,27 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Images\RePoint.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\RePointFS.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="License.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
